--- a/website/index.css
+++ b/website/index.css
@@ -6,6 +6,7 @@ body {
     margin-left: calc((100% - 750px) / 2);
     max-width: 750px;
     font-family: sans-serif;
+    line-height: 1.2em;
 }
 img.paragraph {
     max-width: calc(100% - 100px);
